PR/50910: David Binderman: Optimize memset.